# An-end-to-end-MLops-with-Kubeflow

./: .gitignore  Jenkinsfile  Makefile  README.md  data.dvc  patch_vs.sh  pyproject.toml  requirements.txt  train.sh
dockerfiles/: Dockerfile.app  Dockerfile.ci  Dockerfile.custom_jenkins  Dockerfile.jk  Dockerfile.kubeflow_nb  Dockerfile.kubeflow_ns  Dockerfile.st  Dockerfile.testing
gcp/ingress/: monitoring-ingress.yaml  prediction-ingress.yaml  streamlit-app-ingress.yaml
gcp/terraform/: main.tf  variables.tf
gcp/ui/: Dockerfile  app.py  data_class.py  streamlit-app.yaml
helm-charts/api/: Chart.yaml  values.yaml
helm-charts/jenkins/: Chart.yaml  values.yaml
helm-charts/minio/: custom-values.yaml
helm-charts/mlflow/: custom-values.yaml  postgres.yaml
helm-charts/monitoring/: custom-values.yaml
helm/monitor/: values.yaml
ingress/: allow-ingress-to-minio.yaml  ingress-jenkins.yaml  ingress-kubeflow.yaml  ingress-minio.yaml  ingress-mlflow.yaml  ingress-monitoring.yaml  ingressgateway-allow-kubeflow.yaml  metallb-config.yaml  mlops-ingress.yaml
jenkins/: docker-compose.yaml
kubeflow/: README.md  kind.yaml  patch_vs.sh
local/: docker-compose.yaml  jenkins-service.yaml
notebooks/: eda.ipynb  under_writing_model_exploration.ipynb
src/: api.py  config.py  inference.py  promote_model.py  training.py  underwriting_trainer.py  utils.py
terraform/: main.tf  outputs.tf  terraform.tfvars  variables.tf
testing/: Dockerfile.test  conftest.py  pytest.ini  test.sh  test_pipeline_run.py  utils.py
tests/: pytest.ini  utils.py
virtualization/: Dockerfile
(+130 files in other folders)
